--- a/Resources/tart-dev.entitlements
+++ b/Resources/tart-dev.entitlements
@@ -4,6 +4,8 @@
 <dict>
 	<key>com.apple.security.virtualization</key>
 	<true/>
+	<key>com.apple.private.virtualization</key>
+	<true/>
 	<key>com.apple.security.get-task-allow</key>
 	<true/>
 </dict>
